ensure tables are border collapsed by default

--- a/scss/custom/base/_tables.scss
+++ b/scss/custom/base/_tables.scss
@@ -1,4 +1,6 @@
 /*------------------------------------*\
     $TABLES
 \*------------------------------------*/
+table { border-collapse: collapse; }
+
 th, td { border: 1px solid;}
